--- a/app/src/main/res/layout/preferences_settings_layout.xml
+++ b/app/src/main/res/layout/preferences_settings_layout.xml
@@ -44,6 +44,17 @@
                 app:iconStart="@string/glyph__addressbook"
                 app:title="@string/pref_account_screen_title"/>
 
+            <!-- TODO set correct glyph icon-->
+            <!-- TODO set correct glyph icon-->
+            <com.waz.zclient.pages.main.profile.preferences.views.TextButton
+                android:id="@+id/settings_team"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/preference_button_height"
+                app:iconStart="@string/glyph__add_team"
+                app:title="@string/pref_manage_team_title"/>
+            <!-- TODO set correct glyph icon-->
+            <!-- TODO set correct glyph icon-->
+
             <com.waz.zclient.pages.main.profile.preferences.views.TextButton
                 android:id="@+id/settings_devices"
                 android:layout_width="match_parent"
